image-url-revised

--- a/more.html
+++ b/more.html
@@ -37,7 +37,7 @@
         <div class="user-component">
             <div class="user-component__column">
                 <img 
-                     src="screenshots/한세희.jpg" 
+                     src="https://github.com/shwaaang/kokoa-clone-2022/blob/master/%ED%95%9C%EC%84%B8%ED%9D%AC.jpg?raw=true" 
                      class="user-component__avartar user-component__avartar--xl" 
                 />
                 <div class="user-component__text">
