--- a/chats.html
+++ b/chats.html
@@ -36,7 +36,7 @@
             <div class="user-component">
             <div class="user-component__column">
                 <img 
-                     src="https://github.com/shwaaang/kokoa-clone-2022/blob/master/%ED%95%9C%EC%84%B8%ED%9D%AC.jpg?raw=trueg" 
+                     src="https://github.com/shwaaang/kokoa-clone-2022/blob/master/%ED%95%9C%EC%84%B8%ED%9D%AC.jpg" 
                      class="user-component__avartar user-component__avartar" 
                 />
                 <div class="user-component__text">
