--- a/find.html
+++ b/find.html
@@ -66,7 +66,7 @@
                     <h5 class="open-post__title">#BTS</h5>
                     <h6 class="open-post__hashtags">#bts#army#friends</h6>
                     <div class="open-post__members">
-                        <img src="screenshots/한세희.jpg" />
+                        <img src="https://github.com/shwaaang/kokoa-clone-2022/blob/master/%ED%95%9C%EC%84%B8%ED%9D%AC.jpg" />
                         <span class="open-post__member-count">802 members</span>
                         <div class="divider"></div>
                         <span class="open-post__member-status">Active</span>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="open-post__column">
                     <div class="open-post__photo">
-                        <img src="screenshots/bts.jpeg"/>
+                        <img src="https://github.com/shwaaang/kokoa-clone-2022/blob/master/bts.jpeg"/>
                     </div>
                     <div class="open-post__heart-count">
                         <i class="fa-solid fa-heart fa-xs"></i><span>326</span>
