--- a/friends.html
+++ b/friends.html
@@ -40,7 +40,7 @@
         <div class="user-component">
             <div class="user-component__column">
                 <img 
-                     src="https://github.com/shwaaang/kokoa-clone-2022/blob/master/%ED%95%9C%EC%84%B8%ED%9D%AC.jpg?raw=true" 
+                     src="https://github.com/shwaaang/kokoa-clone-2022/blob/master/%ED%95%9C%EC%84%B8%ED%9D%AC.jpg" 
                      class="user-component__avartar user-component__avartar--xl" 
                 />
                 <div class="user-component__text">
@@ -58,7 +58,7 @@
                 <div class="user-component">
                     <div class="user-component__column">
                        <img 
-                           src="https://github.com/shwaaang/kokoa-clone-2022/blob/master/%ED%95%9C%EC%84%B8%ED%9D%AC.jpg?raw=true" 
+                           src="https://github.com/shwaaang/kokoa-clone-2022/blob/master/%ED%95%9C%EC%84%B8%ED%9D%AC.jpg" 
                            class="user-component__avartar user-component__avartar--sm" 
                         />
                         <div class="user-component__text">
