--- a/chat.html
+++ b/chat.html
@@ -43,7 +43,7 @@
             Tuesday, June 30, 2020
         </div>
         <div class="message-row">
-            <img src="https://github.com/shwaaang/kokoa-clone-2022/blob/master/%ED%95%9C%EC%84%B8%ED%9D%AC.jpg"/>
+            <img src="./https://github.com/shwaaang/kokoa-clone-2022/blob/master/%ED%95%9C%EC%84%B8%ED%9D%AC.jpg?raw=true"/>
             <div class="message-row__content">
                 <span class="message__author">Say</span>
                 <div class="message__info">
