--- a/chat.html
+++ b/chat.html
@@ -43,7 +43,7 @@
             Tuesday, June 30, 2020
         </div>
         <div class="message-row">
-            <img src="./screenshots/한세희.jpg"/>
+            <img src="./한세희.jpg"/>
             <div class="message-row__content">
                 <span class="message__author">Say</span>
                 <div class="message__info">
