--- a/find.html
+++ b/find.html
@@ -66,7 +66,7 @@
                     <h5 class="open-post__title">#BTS</h5>
                     <h6 class="open-post__hashtags">#bts#army#friends</h6>
                     <div class="open-post__members">
-                        <img src="https://github.com/shwaaang/kokoa-clone-2022/blob/master/%ED%95%9C%EC%84%B8%ED%9D%AC.jpg" />
+                        <img src="./한세희.jpg" />
                         <span class="open-post__member-count">802 members</span>
                         <div class="divider"></div>
                         <span class="open-post__member-status">Active</span>
