--- a/chats.html
+++ b/chats.html
@@ -36,7 +36,7 @@
             <div class="user-component">
             <div class="user-component__column">
                 <img 
-                     src="./한세희.jpg" 
+                     src="./src/한세희.jpg" 
                      class="user-component__avartar user-component__avartar" 
                 />
                 <div class="user-component__text">
