--- a/find.html
+++ b/find.html
@@ -74,7 +74,7 @@
                 </div>
                 <div class="open-post__column">
                     <div class="open-post__photo">
-                        <img src="../src/bts.jpeg"/>
+                        <img src="./src/bts.jpeg"/>
                     </div>
                     <div class="open-post__heart-count">
                         <i class="fa-solid fa-heart fa-xs"></i><span>326</span>
