--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Welcome to Kokoa Clone</title>
 </head>
 <body>
-    <div class="status-bar">
+    <div class="status-bar-index">
         <div class="status-bar__column">
           <span>No service</span>
           <i class="fa-solid fa-wifi"></i>
