--- a/find.html
+++ b/find.html
@@ -108,10 +108,10 @@
             </li>
         </ul>
     </nav>
-    <div id="no-mobile">
-        <span>Your screen is too bigㅠㅠ</span>
+    <div id="splash-screen">
+        <i class="fa-solid fa-comment fa-2x"></i>
+        <span id="splash-screen-text">Kokoa Talk For Mobile</span>
     </div>
-
     <script 
        src="https://kit.fontawesome.com/7847e92aad.js" 
        crossorigin="anonymous">
