--- a/friends.html
+++ b/friends.html
@@ -27,7 +27,7 @@
         <div class="screen-header__icons">
             <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
             <span><i class="fa-solid fa-music fa-lg"></i></span>
-            <span><i class="fa-solid fa-gear fa-lg"></i></span>
+            <span><a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a></span>
         </div>
     </header>
 
@@ -101,12 +101,8 @@
     </nav>
     <div id="splash-screen">
         <i class="fa-solid fa-comment fa-2x"></i>
+        <span id="splash-screen-text">Kokoa Talk For Mobile</span>
     </div>
-    <div id="no-mobile">
-        <span>Your screen is too bigㅠㅠ</span>
-    </div>
-
-
     <script 
        src="https://kit.fontawesome.com/7847e92aad.js" 
        crossorigin="anonymous">
