--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </div>
     </div>
     <header class="welcome-header">
-        <h1 class="welcome-header__title">Welcome to Kokoa Clone</h1>
-        <p class="welcome-header__text">If you have a Kakao Account, log in with your email or phone number.            
+        <h1 class="welcome-header__title">Welcome to Kokoa Talk</h1>
+        <p class="welcome-header__text">If you have a Kokoa Account, log in with your email or phone number.            
         </p>
     </header>
     <form action="friends.html" method="get" id="login-form">
@@ -33,8 +33,9 @@
         <input type="submit" value="Log In" />
         <a href="#">Find Kokoa Account or Password</a>
     </form>
-    <div id="no-mobile">
-        <span>Your screen is too bigㅠㅠ</span>
+    <div id="splash-screen">
+        <i class="fa-solid fa-comment fa-2x"></i>
+        <span id="splash-screen-text">Kokoa Talk For Mobile</span>
     </div>
     <script 
         src="https://kit.fontawesome.com/7847e92aad.js" 
