--- a/chats.html
+++ b/chats.html
@@ -80,7 +80,7 @@
     </nav>
     <div id="splash-screen">
         <i class="fa-solid fa-comment fa-2x"></i>
-        <span class="splash-screen-text">Kokoa Talk For Mobile</span>
+        <span id="splash-screen-text">Kokoa Talk For Mobile</span>
     </div>
     <script 
        src="https://kit.fontawesome.com/7847e92aad.js" 
