--- a/chat.html
+++ b/chat.html
@@ -9,14 +9,14 @@
 </head>
 <body id="chat-screen">
     <div class="status-bar">
-        <div class="status-bar__column">
+        <div class="status-bar-column">
           <span>No service</span>
           <i class="fa-solid fa-wifi"></i>
         </div>
-        <div class="status-bar__column">
+        <div class="status-bar-column">
             <span>18:43</span>
         </div>
-        <div class="status-bar__column">
+        <div class="status-bar-column">
             <span>110%</span>
             <i class="fa-solid fa-battery-full"></i>
             <i class="fa-solid fa-bolt"></i>
@@ -24,49 +24,49 @@
     </div>
 
     <header class="alt-header">
-        <div class="alt-header__column">
+        <div class="alt-header-column">
             <a href="chats.html">
             <i class="fa-solid fa-angle-left fa-3x"></i>
             </a>
         </div>
-        <div class="alt-header__column">
-            <h1 class="alt-header__title">세희</h1>
+        <div class="alt-header-column">
+            <h1 class="alt-header-title">세희</h1>
         </div>
-        <div class="alt-header__column">
+        <div class="alt-header-column">
             <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
             <span><i class="fa-solid fa-bars fa-lg"></i></span>
         </div>
     </header>
 
     <main class="main-screen main-chat">
-        <div class="chat__timestamp">
+        <div class="chat-timestamp">
             Tuesday, June 30, 2020
         </div>
         <div class="message-row">
             <img src="./src/한세희.jpg"/>
-            <div class="message-row__content">
-                <span class="message__author">Say</span>
-                <div class="message__info">
-                    <span class="message__bubble">Hi!</span>
-                    <span class="message__time">21:27</span>
+            <div class="message-row-content">
+                <span class="message-author">Say</span>
+                <div class="message-info">
+                    <span class="message-bubble">Hi!</span>
+                    <span class="message-time">21:27</span>
                 </div>
             </div>
         </div>
         <div class="message-row message-row--own">
-            <div class="message-row__content">
-                <div class="message__info">
-                    <span class="message__bubble">What's up?</span>
-                    <span class="message__time">21:27</span>
+            <div class="message-row-content">
+                <div class="message-info">
+                    <span class="message-bubble">What's up?</span>
+                    <span class="message-time">21:27</span>
                 </div>
             </div>
         </div>
     </main>
    
     <form class="reply">
-        <div class="reply__column">
+        <div class="reply-column">
             <i class="fa-solid fa-plus fa-lg"></i>
         </div>
-        <div class="reply__column">
+        <div class="reply-column">
             <input type="text" placeholder="Write a message..."/>
             <i class="fa-regular fa-face-smile-wink fa-lg"></i>
             <button>
