--- a/find.html
+++ b/find.html
@@ -9,74 +9,74 @@
 </head>
 <body>
     <div class="status-bar">
-        <div class="status-bar__column">
+        <div class="status-bar-column">
           <span>No service</span>
           <i class="fa-solid fa-wifi"></i>
         </div>
-        <div class="status-bar__column">
+        <div class="status-bar-column">
             <span>18:43</span>
         </div>
-        <div class="status-bar__column">
+        <div class="status-bar-column">
             <span>110%</span>
             <i class="fa-solid fa-battery-full"></i>
             <i class="fa-solid fa-bolt"></i>
         </div>
     </div>
     <header class="screen-header">
-        <h1 class="screen-header__title">Find</h1>
-        <div class="screen-header__icons">
+        <h1 class="screen-header-title">Find</h1>
+        <div class="screen-header-icons">
             <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
             <span><a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a></span>
-            <div class="screen-header__reddot">
+            <div class="screen-header-reddot">
                 <div class="reddot"></div>
             </div>
         </div>
     </header>
     <main class="main-screen">
         <div class="icon-row">
-            <div class="icon-row__icon">
+            <div class="icon-row-icon">
                 <i class="fa-solid fa-qrcode"></i>
                 <span>QR Code</span>
             </div>
-            <div class="icon-row__icon">
+            <div class="icon-row-icon">
                 <i class="fa-solid fa-qrcode"></i>
                 <span>Add by contacts</span>
             </div>
-            <div class="icon-row__icon">
+            <div class="icon-row-icon">
                 <i class="fa-solid fa-fingerprint"></i>
                 <span>Add by ID</span>
             </div>
-            <div class="icon-row__icon">
+            <div class="icon-row-icon">
                 <i class="fa-regular fa-envelope"></i>
                 <span>Invite</span>
             </div>
         </div>
         <div class="recommended-friends">
-            <h6 class="Recommended-friends__title">Recommended-friends</h6>
+            <h6 class="Recommended-friends-title">Recommended-friends</h6>
             <span>You have no recommended friends.</span>
         </div>
         <div class="open-chat">
-            <div class="open-chat__header">
-                <h4 class="open-chat__title">Open Chat</h4>
+            <div class="open-chat-header">
+                <h4 class="open-chat-title">Open Chat</h4>
                 <span>Go to Open Chat Home</span>
                 <i class="fa-solid fa-chevron-right fa-xs"></i>
             </div>
             <div class="open-post">
-                <div class="open-post__column">
-                    <h5 class="open-post__title">#BTS</h5>
-                    <h6 class="open-post__hashtags">#bts#army#friends</h6>
-                    <div class="open-post__members">
+                <div class="open-post-column">
+                    <h5 class="open-post-title">#BTS</h5>
+                    <h6 class="open-post-hashtags">#bts#army#friends</h6>
+                    <div class="open-post-members">
                         <img src="./src/한세희.jpg" />
-                        <span class="open-post__member-count">802 members</span>
+                        <span class="open-post-member-count">802 members</span>
                         <div class="divider"></div>
-                        <span class="open-post__member-status">Active</span>
+                        <span class="open-post-member-status">Active</span>
                     </div>
                 </div>
-                <div class="open-post__column">
-                    <div class="open-post__photo">
+                <div class="open-post-column">
+                    <div class="open-post-photo">
                         <img src="./src/bts.jpeg"/>
                     </div>
-                    <div class="open-post__heart-count">
+                    <div class="open-post-heart-count">
                         <i class="fa-solid fa-heart fa-xs"></i><span>326</span>
                     </div>
                 </div>
@@ -85,24 +85,24 @@
     </main>
 
     <nav class="nav">
-        <ul class="nav__list">
-            <li class="nav__btn">
-                <a class="nav__link" href="friends.html"
+        <ul class="nav-list">
+            <li class="nav-btn">
+                <a class="nav-link" href="friends.html"
                    ><i class="fa-regular fa-user fa-2x"></i
                 ></a>
             </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="chats.html">
-                    <span class="nav__notification badge">1</span>
+            <li class="nav-btn">
+                <a class="nav-link" href="chats.html">
+                    <span class="nav-notification badge">1</span>
                     <i class="fa-regular fa-comment fa-2x"></i>
                 </a>
             </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
+            <li class="nav-btn">
+                <a class="nav-link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
             </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="more.html">
-                    <div class="nav__reddot"></div>
+            <li class="nav-btn">
+                <a class="nav-link" href="more.html">
+                    <div class="nav-reddot"></div>
                     <i class="fa-solid fa-ellipsis fa-2x"></i>
                 </a>
             </li>
