--- a/friends.html
+++ b/friends.html
@@ -9,22 +9,22 @@
 </head>
 <body>
     <div class="status-bar">
-        <div class="status-bar__column">
+        <div class="status-bar-column">
           <span>No service</span>
           <i class="fa-solid fa-wifi"></i>
         </div>
-        <div class="status-bar__column">
+        <div class="status-bar-column">
             <span>18:43</span>
         </div>
-        <div class="status-bar__column">
+        <div class="status-bar-column">
             <span>110%</span>
             <i class="fa-solid fa-battery-full"></i>
             <i class="fa-solid fa-bolt"></i>
         </div>
     </div>
     <header class="screen-header">
-        <h1 class="screen-header__title">Friends</h1>
-        <div class="screen-header__icons">
+        <h1 class="screen-header-title">Friends</h1>
+        <div class="screen-header-icons">
             <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
             <span><i class="fa-solid fa-music fa-lg"></i></span>
             <span><a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a></span>
@@ -38,34 +38,34 @@
     
     <main class="friends-screen">
         <div class="user-component">
-            <div class="user-component__column">
+            <div class="user-component-column">
                 <img 
                      src="./src/한세희.jpg" 
-                     class="user-component__avartar user-component__avartar--xl" 
+                     class="user-component-avartar user-component-avartar--xl" 
                 />
-                <div class="user-component__text">
-                     <h4 class="user-component__title">Say</h4>
-                     <!--<h6 class="user-component__subtitle">this text whatever</h6>-->
+                <div class="user-component-text">
+                     <h4 class="user-component-title">Say</h4>
+                     <!--<h6 class="user-component-subtitle">this text whatever</h6>-->
                 </div>
             </div> 
-            <div class="user-component__column"></div>
+            <div class="user-component-column"></div>
         </div>        
-            <div class="friends-screen__channel">
-                <div class="friends-screen__channel-header">
+            <div class="friends-screen-channel">
+                <div class="friends-screen-channel-header">
                     <span>Channel</span>
                     <i class="fa-solid fa-chevron-up fa-xs"></i>
                 </div>
                 <div class="user-component">
-                    <div class="user-component__column">
+                    <div class="user-component-column">
                        <img 
                            src="./src/한세희.jpg" 
-                           class="user-component__avartar user-component__avartar--sm" 
+                           class="user-component-avartar user-component-avartar--sm" 
                         />
-                        <div class="user-component__text">
-                            <h4 class="user-component__title user-component__title--not-bold">Channel</h4>
+                        <div class="user-component-text">
+                            <h4 class="user-component-title user-component-title--not-bold">Channel</h4>
                         </div>
                     </div>    
-                    <div class="user-component__column">
+                    <div class="user-component-column">
                         <div>
                            <span>2</span>
                            <i class="fa-solid fa-chevron-right fa-xs"></i>
@@ -76,24 +76,24 @@
     </main>
 
     <nav class="nav">
-        <ul class="nav__list">
-            <li class="nav__btn">
-                <a class="nav__link" href="friends.html"
+        <ul class="nav-list">
+            <li class="nav-btn">
+                <a class="nav-link" href="friends.html"
                    ><i class="fa-solid fa-user fa-2x"></i
                 ></a>
             </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="chats.html">
-                    <span class="nav__notification badge">1</span>
+            <li class="nav-btn">
+                <a class="nav-link" href="chats.html">
+                    <span class="nav-notification badge">1</span>
                     <i class="fa-regular fa-comment fa-2x"></i>
                 </a>
             </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
+            <li class="nav-btn">
+                <a class="nav-link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
             </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="more.html">
-                    <div class="nav__reddot"></div>
+            <li class="nav-btn">
+                <a class="nav-link" href="more.html">
+                    <div class="nav-reddot"></div>
                     <i class="fa-solid fa-ellipsis fa-2x"></i>
                 </a>
             </li>
