--- a/more.html
+++ b/more.html
@@ -9,109 +9,109 @@
 </head>
 <body>
     <div class="status-bar">
-        <div class="status-bar__column">
+        <div class="status-bar-column">
           <span>No service</span>
           <i class="fa-solid fa-wifi"></i>
         </div>
-        <div class="status-bar__column">
+        <div class="status-bar-column">
             <span>18:43</span>
         </div>
-        <div class="status-bar__column">
+        <div class="status-bar-column">
             <span>110%</span>
             <i class="fa-solid fa-battery-full"></i>
             <i class="fa-solid fa-bolt"></i>
         </div>
     </div>
     <header class="screen-header">
-        <h1 class="screen-header__title">More</h1>
-        <div class="screen-header__icons">
+        <h1 class="screen-header-title">More</h1>
+        <div class="screen-header-icons">
             <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
             <span><i class="fa-solid fa-music"></i></span>
             <span><a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a></span>
-            <div class="screen-header__reddot">
+            <div class="screen-header-reddot">
                 <div class="reddot"></div>
             </div>
         </div>
     </header>
     <main class="main-screen more-screen">
         <div class="user-component">
-            <div class="user-component__column">
+            <div class="user-component-column">
                 <img 
                      src="./src/한세희.jpg" 
-                     class="user-component__avartar user-component__avartar--xl" 
+                     class="user-component-avartar user-component-avartar--xl" 
                 />
-                <div class="user-component__text">
-                     <h4 class="user-component__title">Say</h4>
-                     <h6 class="user-component__subtitle">+82 01067869307
+                <div class="user-component-text">
+                     <h4 class="user-component-title">Say</h4>
+                     <h6 class="user-component-subtitle">+82 01067869307
                         <i class="fa-solid fa-circle-exclamation"></i></h6>
                 </div>
             </div> 
-            <div class="user-component__column">
+            <div class="user-component-column">
                 <i class="fa-regular fa-message fa-2x"></i>
             </div>
         </div> 
         <div class="icon-row">
-            <div class="icon-row__icon">
+            <div class="icon-row-icon">
                 <i class="fa-regular fa-calendar"></i>
                 <span>Calendar</span>
             </div>
-            <div class="icon-row__icon">
+            <div class="icon-row-icon">
                 <i class="fa-regular fa-face-smile"></i>
                 <span>Emoticons</span>
             </div>
-            <div class="icon-row__icon">
+            <div class="icon-row-icon">
                 <i class="fa-solid fa-paint-roller"></i>
                 <span>Themes</span>
             </div>
-            <div class="icon-row__icon">
+            <div class="icon-row-icon">
                 <i class="fa-solid fa-file-invoice-dollar"></i>
                 <span>Account</span>
             </div>
         </div>
         <div class="more-suggestions">
-            <h4 class="more-suggestions__title">Suggestions</h4>
-            <div class="more-suggestions__icons">
-                <div class="more-suggestions__icon">
-                    <div class="more-suggestions__icon-image">
+            <h4 class="more-suggestions-title">Suggestions</h4>
+            <div class="more-suggestions-icons">
+                <div class="more-suggestions-icon">
+                    <div class="more-suggestions-icon-image">
                         <i class="fa-solid fa-quote-right"></i>
                     </div>
-                    <span class="more-suggestions__icon-text">Kokoa Story</span>
+                    <span class="more-suggestions-icon-text">Kokoa Story</span>
                 </div>
-                <div class="more-suggestions__icon">
-                    <div class="more-suggestions__icon-image">
+                <div class="more-suggestions-icon">
+                    <div class="more-suggestions-icon-image">
                         <i class="fa-solid fa-user-group"></i>
                     </div>
-                    <span class="more-suggestions__icon-text">Kokoa Friends</span>
+                    <span class="more-suggestions-icon-text">Kokoa Friends</span>
                 </div>
-                <div class="more-suggestions__icon">
-                    <div class="more-suggestions__icon-image">
+                <div class="more-suggestions-icon">
+                    <div class="more-suggestions-icon-image">
                         <i class="fa-solid fa-store"></i>
                     </div>
-                    <span class="more-suggestions__icon-text">Kokoa Store</span>
+                    <span class="more-suggestions-icon-text">Kokoa Store</span>
                 </div>
             </div>
         </div>
     </main>
    
     <nav class="nav">
-        <ul class="nav__list">
-            <li class="nav__btn">
-                <a class="nav__link" href="friends.html"
+        <ul class="nav-list">
+            <li class="nav-btn">
+                <a class="nav-link" href="friends.html"
                    ><i class="fa-regular fa-user fa-2x"></i
                 ></a>
             </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="chats.html">
-                    <span class="nav__notification badge">1</span>
+            <li class="nav-btn">
+                <a class="nav-link" href="chats.html">
+                    <span class="nav-notification badge">1</span>
                     <i class="fa-regular fa-comment fa-2x"></i>
                 </a>
             </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
+            <li class="nav-btn">
+                <a class="nav-link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
             </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="more.html">
-                    <div class="nav__reddot"></div>
+            <li class="nav-btn">
+                <a class="nav-link" href="more.html">
+                    <div class="nav-reddot"></div>
                     <i class="fa-solid fa-ellipsis fa-2x"></i>
                 </a>
             </li>
