--- a/chats.html
+++ b/chats.html
@@ -9,22 +9,22 @@
 </head>
 <body>
     <div class="status-bar">
-        <div class="status-bar__column">
+        <div class="status-bar-column">
           <span>No service</span>
           <i class="fa-solid fa-wifi"></i>
         </div>
-        <div class="status-bar__column">
+        <div class="status-bar-column">
             <span>18:43</span>
         </div>
-        <div class="status-bar__column">
+        <div class="status-bar-column">
             <span>110%</span>
             <i class="fa-solid fa-battery-full"></i>
             <i class="fa-solid fa-bolt"></i>
         </div>
     </div>
     <header class="screen-header">
-        <h1 class="screen-header__title">Chats</h1>
-        <div class="screen-header__icons">
+        <h1 class="screen-header-title">Chats</h1>
+        <div class="screen-header-icons">
             <span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
             <span><i class="fa-regular fa-comment-dots fa-lg"></i></span>
             <span><i class="fa-solid fa-music fa-lg"></i></span>
@@ -34,20 +34,20 @@
     <main class="main-screen">
         <a href="chat.html">
             <div class="user-component">
-            <div class="user-component__column">
+            <div class="user-component-column">
                 <img 
                      src="./src/한세희.jpg" 
-                     class="user-component__avartar user-component__avartar" 
+                     class="user-component-avartar user-component-avartar" 
                 />
-                <div class="user-component__text">
-                     <h4 class="user-component__title">Say</h4>
-                     <h6 class="user-component__subtitle">
+                <div class="user-component-text">
+                     <h4 class="user-component-title">Say</h4>
+                     <h6 class="user-component-subtitle">
                         Please check My Kokoa Account Info
                      </h6>
                 </div>
             </div> 
-            <div class="user-component__column">
-                <span class="user-component__time">21:22</span>
+            <div class="user-component-column">
+                <span class="user-component-time">21:22</span>
                 <div class="badge">1</div>
             </div>
             </div>  
@@ -55,24 +55,24 @@
     </main>
 
     <nav class="nav">
-        <ul class="nav__list">
-            <li class="nav__btn">
-                <a class="nav__link" href="friends.html"
+        <ul class="nav-list">
+            <li class="nav-btn">
+                <a class="nav-link" href="friends.html"
                    ><i class="fa-regular fa-user fa-2x"></i
                 ></a>
             </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="chats.html">
-                    <span class="nav__notification badge">1</span>
-                    <i class="fa-solid fa-comment fa-2x"></i>
+            <li class="nav-btn">
+                <a class="nav-link" href="chats.html">
+                    <span class="nav-notification badge">1</span>
+                    <i class="fa-regular fa-comment fa-2x"></i>
                 </a>
             </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
+            <li class="nav-btn">
+                <a class="nav-link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
             </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="more.html">
-                    <div class="nav__reddot"></div>
+            <li class="nav-btn">
+                <a class="nav-link" href="more.html">
+                    <div class="nav-reddot"></div>
                     <i class="fa-solid fa-ellipsis fa-2x"></i>
                 </a>
             </li>
