--- a/index.html
+++ b/index.html
@@ -9,22 +9,22 @@
 </head>
 <body>
     <div class="status-bar-index">
-        <div class="status-bar__column">
+        <div class="status-bar-column">
           <span>No service</span>
           <i class="fa-solid fa-wifi"></i>
         </div>
-        <div class="status-bar__column">
+        <div class="status-bar-column">
             <span>18:43</span>
         </div>
-        <div class="status-bar__column">
+        <div class="status-bar-column">
             <span>110%</span>
             <i class="fa-solid fa-battery-full"></i>
             <i class="fa-solid fa-bolt"></i>
         </div>
     </div>
     <header class="welcome-header">
-        <h1 class="welcome-header__title">Welcome to Kokoa Talk</h1>
-        <p class="welcome-header__text">If you have a Kokoa Account, log in with your email or phone number.            
+        <h1 class="welcome-header-title">Welcome to Kokoa Talk</h1>
+        <p class="welcome-header-text">If you have a Kokoa Account, log in with your email or phone number.            
         </p>
     </header>
     <form action="friends.html" method="get" id="login-form">
