--- a/settings.html
+++ b/settings.html
@@ -9,14 +9,14 @@
 </head>
 <body>
     <div class="status-bar">
-        <div class="status-bar__column">
+        <div class="status-bar-column">
           <span>No service</span>
           <i class="fa-solid fa-wifi"></i>
         </div>
-        <div class="status-bar__column">
+        <div class="status-bar-column">
             <span>18:43</span>
         </div>
-        <div class="status-bar__column">
+        <div class="status-bar-column">
             <span>110%</span>
             <i class="fa-solid fa-battery-full"></i>
             <i class="fa-solid fa-bolt"></i>
@@ -24,15 +24,15 @@
     </div>
 
     <header class="alt-header">
-        <div class="alt-header__column">
+        <div class="alt-header-column">
             <a href="more.html">
             <i class="fa-solid fa-angle-left fa-3x"></i>
             </a>
         </div>
-        <div class="alt-header__column">
-            <h1 class="alt-header__title">Settings</h1>
+        <div class="alt-header-column">
+            <h1 class="alt-header-title">Settings</h1>
         </div>
-        <div class="alt-header__column">
+        <div class="alt-header-column">
             <i class="fa-solid fa-magnifying-glass fa-lg"></i>
         </div>
     </header>
@@ -40,72 +40,72 @@
     <main class="main-screen">
         <ul class="settings-list">
             <li class="settings-setting">
-                <div class="settings__setting-column">
+                <div class="settings-setting-column">
                     <i class="fa-solid fa-bullhorn"></i>
                     <span>Notices</span>
                 </div>
-                <div class="settings__setting-column"></div>
+                <div class="settings-setting-column"></div>
             <li class="settings-setting">
-                <div class="settings__setting-column">
+                <div class="settings-setting-column">
                     <i class="fa-solid fa-flask"></i>
                     <span>Kokoa Lab</span>
                 </div>
-                <div class="settings__setting-column"></div>
+                <div class="settings-setting-column"></div>
             </li>
             <li class="settings-setting">
-                <div class="settings__setting-column">
+                <div class="settings-setting-column">
                     <i class="fa-solid fa-circle-info"></i>
                     <span>Version</span>
                 </div>
-                <div class="settings__setting-column">Latest Version</div>
+                <div class="settings-setting-column">Latest Version</div>
             </li>
             <li class="settings-setting">
-                <div class="settings__setting-column">
+                <div class="settings-setting-column">
                     <i class="fa-solid fa-brush"></i>
                     <span>Themes</span>
                 </div>
-                <div class="settings__setting-column"></div>
+                <div class="settings-setting-column"></div>
             </li>
-            <a class="nav__link" href="chats.html">
+            <a class="nav-link" href="chats.html">
             <li class="settings-setting">
-                <div class="settings__setting-column">
+                <div class="settings-setting-column">
                     <i class="fa-solid fa-comment"></i>
                     <span>Chat</span>
                 </div>
-                <div class="settings__setting-column">Click!</div>
+                <div class="settings-setting-column">Click!</div>
             </li>
             </a>
-            <a class="nav__link" href="chat.html">
+            <a class="nav-link" href="chat.html">
             <li class="settings-setting">
-                <div class="settings__setting-column">
+                <div class="settings-setting-column">
                     <i class="fa-regular fa-message"></i>
                     <span>View messages</span>
                 </div>
-                <div class="settings__setting-column">Click!</div>
+                <div class="settings-setting-column">Click!</div>
             </li>
             </a>
         </ul>
     </main>
    
     <nav class="nav">
-        <ul class="nav__list">
-            <li class="nav__btn">
-                <a class="nav__link" href="friends.html"
+        <ul class="nav-list">
+            <li class="nav-btn">
+                <a class="nav-link" href="friends.html"
                    ><i class="fa-regular fa-user fa-2x"></i
                 ></a>
             </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="chats.html">
-                    <span class="nav__notification badge">1</span>
+            <li class="nav-btn">
+                <a class="nav-link" href="chats.html">
+                    <span class="nav-notification badge">1</span>
                     <i class="fa-regular fa-comment fa-2x"></i>
                 </a>
             </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
+            <li class="nav-btn">
+                <a class="nav-link" href="find.html"><i class="fa-solid fa-magnifying-glass fa-2x"></i></a>
             </li>
-            <li class="nav__btn">
-                <a class="nav__link" href="more.html">
-                    <div class="nav__reddot"></div>
+            <li class="nav-btn">
+                <a class="nav-link" href="more.html">
+                    <div class="nav-reddot"></div>
                     <i class="fa-solid fa-ellipsis fa-2x"></i>
                 </a>
             </li>
